用户弹窗小卡片效果

--- a/demo.html
+++ b/demo.html
@@ -12,8 +12,8 @@
     	<a href="#" class="username effect-normal left pull-left">用户小卡片效果(默认)</a>
 		<a href="#" class="username effect-extend right pull-right">用户小卡片效果(传参)</a>
 		<div id="layout"></div>
-		<a href="#" class="username effect-normal pull-left">用户小卡片效果</a>
-		<a href="#" class="username effect-normal right pull-right">用户小卡片效果</a>
+		<a href="#" class="username effect-normal pull-left">自动判断弹窗位置</a>
+		<a href="#" class="username effect-normal right pull-right">自动判断弹窗位置</a>
 
     	<div id="ajax-box"></div>
 
